plugins {
    id 'java-library'
    id 'maven-publish'
}

group = 'org.apache.logging.log4j'
version = '0.1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_22
    targetCompatibility = JavaVersion.VERSION_22
}

dependencies {
    api 'org.apache.logging.log4j:log4j-api:2.20.0'
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

test {
    useJUnitPlatform()
    // FFM might require native access enablement depending on module structure
    jvmArgs += ["--enable-native-access=ALL-UNNAMED"]
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            groupId = 'org.apache.logging.log4j'
            artifactId = 'rlog4j-all-platforms'
            version = '0.1.0-SNAPSHOT'
        }
    }
}
